--- a/TruckSaleWebApp/Views/Home/Contact.cshtml
+++ b/TruckSaleWebApp/Views/Home/Contact.cshtml
@@ -3,5 +3,47 @@
     ViewBag.Title = "Liên Hệ";
 }
 
-<h2>Contact</h2>
+<style>
+    body {
+        line-height: 1.8;
+    }
+     
+</style>
+<section>
+    <div class="container">
+        <div class="row text-center header animate-in" data-anim-type="fade-in-up">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h3>Liên Hệ</h3><hr />
+            </div>
+        </div>
 
+        <div class="row animate-in" data-anim-type="fade-in-up">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="wrapper-box">
+                    <div class="section-info">
+                        <p class="text-center">
+                            Công ty cổ phần ô tô tải biên hòa là hệ thống đại lý ủy quyền phân phối lớn nhất các dòng xe tải trên
+                            thị trường Đồng Nai và khu vực Đông Nam Bộ
+                        </p>
+                        <p class="text-center">gồm các dòng xe tải hạng nhẹ, trung tải tải nặng và đầu kéo nhập khẩu</p>
+                        <p class="text-center">Với nhiều hệ thống Đại Lý 3s phân phối chuyên biệt từng dòng xe tải vì thế chúng tôi cam kết đem lại cho khách hàng </p>
+                        <p class="text-center"><strong>chất lượng chính hãng - giá thành ưu đãi - hậu mãi dài lâu</strong></p>
+                        <p class="text-center">HYUNDAI – ISUZU- VEAM-  SUZUKI- MISTUBISHI</p>
+                        <p class="text-center">BIÊN HÒA-AUTO GROUP</p>
+                        <p class="text-center">Chuyên viên kinh doanh: NGUYỄN QUỐC ĐẠT</p>
+                        <p class="text-center">
+                            Mobile: 0909 567 067 & email:
+                            <a href="mailto:p.kinhdoanh@ototaibienhoa.com">p.kinhdoanh@ototaibienhoa.com</a>
+                        </p>
+                    </div>
+                    <div class="section-info">
+                        <p><strong>Showroom 1:</strong></p>
+                        <p>579 quốc lộ 1A, ấp Ngũ Phúc, xã Hố Nai 3, Trảng bom, Đồng Nai</p>
+                        <p><img class="img-responsive" src="~/Content/img/contact1.png" /></p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
