--- a/TruckSaleWebApp/Views/Home/Product.cshtml
+++ b/TruckSaleWebApp/Views/Home/Product.cshtml
@@ -20,7 +20,7 @@
                         <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
                             <div class="product-quick-show">
                                 <h2><strong id="product-name"></strong></h2>
-                                <h2><strong id="product-price"></strong></h2>
+                                <h2><strong id="product-price" class="price"></strong></h2>
                                 <table class="table table-spec">
                                     <tr>
                                         <td><strong>Hãng Sản Xuất:</strong></td>
