--- a/TruckSaleWebApp/Views/Home/Products.cshtml
+++ b/TruckSaleWebApp/Views/Home/Products.cshtml
@@ -33,7 +33,7 @@
 				            		"<img src='{0}' class='img-responsive img-rounded' alt='' />"+
 				        		"</a>"+
 				        		"<h4>{1}</h4>"+
-				        		"<h2><strong>{2}</strong></h2>"+
+				        		"<h2><strong class='price'>{2}</strong></h2>"+
 				    		"</div>"+
 				    	"</div>";
 			var tmp = $.validator.format(tmps);
