--- a/TruckSaleWebApp/Views/Home/Repair.cshtml
+++ b/TruckSaleWebApp/Views/Home/Repair.cshtml
@@ -41,7 +41,7 @@
                                     <p  style="color:red">0909 567 067</p>
                                     <p style="color:red">0907 987 2060</p>
                                 </td>
-                                <td>
+                                <td style="vertical-align:top">
                                     <p>Đến với Gara hyundai là đến với uy tín, cũng là đến với thiết bị công nghệ tiên tiến,
                                      máy chẩn đoán hiện đại nhất của hyundai và sự phục vụ chu đáo nhanh chóng, nhiệt tình của đội ngũ kỹ thuật cao. 
                                     Gara ô tô hyundai thực sự trở thành địa chỉ đáng tin cậy cho sự lựa chọn của bạn về việc sửa chữa, bảo dưỡng, chăm sóc cho chiếc xế yêu của mình.</p>
@@ -51,7 +51,39 @@
                         <p><center><img class="img img-responsive" src="~/Content/img/repair1.jpg"/></center></p>
                         <p><center><img class="img img-responsive" src="~/Content/img/repair2.jpg" /></center></p>
                     </div>
-
+                    <div class="section-info">
+                        <p><strong>Một số dịch vụ sửa chữa tại gara ô tô hyundai : </strong></p>
+                        <ul>
+                            <li>Kiểm tra tình trạng kỹ thuật của xe.</li>
+                            <li>Dịch vụ bảo dưỡng ô tô định kỳ.</li>
+                            <li>Sửa chữa, bảo dưỡng, đại tu.</li>
+                            <li>Sữa chữa máy, gầm, động cơ, đôn nhíp.</li>
+                            <li>Sửa chữa lưu động.</li>
+                            <li>Thay dầu động cơ</li>
+                            <li>Cung cấp các thiết bị, phụ tùng ô tô.</li>
+                        </ul>
+                        <p><strong>Một số thiết bị sửa chữa ô tô chuyên dụng của gara ô tô hyundai:</strong></p>
+                        <ul>
+                            <li>Thiết bị đo, kiểm tra trượt ngang hệ thống tay lái điện tử.</li>
+                            <li>Thiết bị điện tử kiểm tra hệ thống phanh.</li>
+                            <li>Thiết bị kiểm tra khí thải và tiêu hao nhiên liệu.</li>
+                            <li>Thiết bị kiểm tra hệ thống điều hòa .</li>
+                            <li>Thiết bị kiểm tra chuyên dùng cho máy phun xăng điện tử.</li>
+                            <li>Thiết bị cầu nâng : sửa chữa, bảo dưỡng xe.</li>
+                            <li>Thiết bị đo lái và căn chỉnh tay lái.</li>
+                            <li>Thiết bị kiểm tra hệ thống đánh lửa.</li>
+                            <li>Thiết bị điện tử kiểm tra giảm sóc, giảm chấn gầm xe.</li>
+                            <li>Máy doa xy lanh.</li>
+                            <li>Máy nén khí áp lực cao.</li>
+                            <li>Máy tháo lắp bu lông bằng hơi.</li>
+                            <li>Máy tiện, máy khoan hiện đại.</li>
+                            <li>Và rất nhiều thiết bị tân tiến khác.</li>
+                        </ul>
+                        <p>Ngoài sửa chữa, chúng tôi còn nhận bảo dưỡng , chăm sóc cho chiếc xế yêu của các bạn từ a-z.
+                         Để đảm bảo chiếc xe của bạn luôn như mới và động cơ chạy chuôn chu thì việc <u>bảo dưỡng ô tô</u> định kỳ là việc rất cần thiết.
+                        Nếu các bạn có nhu cầu <strong>bảo dưỡng và sửa chữa ô tô</strong>, hãy ghé thăm gara ô tô hyundai của chúng tôi. 
+                        Hoặc bạn cũng có thể gọi điện đến đường dây nóng để được chúng tôi trực tiếp tư vấn, giải đáp mọi thắc mắc.</p>
+                    </div>
                 </div>
             </div>
         </div>
